# exercisms

./: .gitignore
c/anagram/: CMakeLists.txt
c/anagram/src/: anagram.c  anagram.h
c/bob/: CMakeLists.txt
c/bob/src/: bob.c  bob.h
c/bob/test/: test_bob.c
c/gigasecond/: CMakeLists.txt
c/gigasecond/src/: gigasecond.c  gigasecond.h
c/gigasecond/test/: test_gigasecond.c
c/hamming/: CMakeLists.txt
c/hamming/src/: hamming.c  hamming.h
c/leap/: CMakeLists.txt
c/leap/src/: leap.c  leap.h
c/raindrops/: CMakeLists.txt
c/raindrops/src/: raindrops.c  raindrops.h
cpp/bob/: CMakeLists.txt  bob.cpp  bob.h  bob_test.cpp
cpp/gigasecond/: CMakeLists.txt  gigasecond.cpp  gigasecond.h  gigasecond_test.cpp
